--- a/checkout.html
+++ b/checkout.html
@@ -31,7 +31,7 @@
     <ul id="cartItems"></ul>
 
     <div class="totalPart">
-        <p>Total:</p>
+        <p id="total">Total:</p>
     <button class="checkout" id="checkoutButton">Checkout</button>
     <p>Your grand total (including tax, 9.25%) is </p>
     </div>
