--- a/checkout.html
+++ b/checkout.html
@@ -33,7 +33,7 @@
     <div class="totalPart">
         <p id="total">Total:</p>
     <button class="checkout" id="checkoutButton">Checkout</button>
-    <p>Your grand total (including tax, 9.25%) is </p>
+    <p id="totalWithTax">Your grand total (including tax, 9.25%) is </p>
     </div>
 </body>
 </html>
